--- a/AdminConstruct.Ryzor/AdminConstruct.Ryzor.csproj
+++ b/AdminConstruct.Ryzor/AdminConstruct.Ryzor.csproj
@@ -13,4 +13,16 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="EPPlus" Version="8.2.1" />
+      <PackageReference Include="iTextSharp" Version="5.5.13.4" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    </ItemGroup>
+
 </Project>
