--- a/AdminConstruct.Ryzor/AdminConstruct.Ryzor.csproj
+++ b/AdminConstruct.Ryzor/AdminConstruct.Ryzor.csproj
@@ -15,8 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="EPPlus" Version="8.2.1" />
-      <PackageReference Include="iTextSharp" Version="5.5.13.4" />
+    <PackageReference Include="EPPlus" Version="8.2.1" />
+    <PackageReference Include="EPPlus" Version="8.2.1" />
+    <PackageReference Include="QuestPDF" Version="2024.10.4" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
