--- a/AdminConstruct.Ryzor/appsettings.json
+++ b/AdminConstruct.Ryzor/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=${DB_HOST};Port=${DB_PORT};Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=jorge;Username=jorge;Password=jorge123"
+    
   },
   "Logging": {
     "LogLevel": {
