Feat: manage excel

--- a/AdminConstruct.Ryzor/AdminConstruct.Ryzor.csproj
+++ b/AdminConstruct.Ryzor/AdminConstruct.Ryzor.csproj
@@ -28,4 +28,8 @@
       <PackageReference Include="QuestPDF" Version="2025.12.0-alpha2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\uploads\" />
+    </ItemGroup>
+
 </Project>
