feat: API and core

--- a/AdminConstruct.Web/AdminConstruct.Web.csproj
+++ b/AdminConstruct.Web/AdminConstruct.Web.csproj
@@ -32,4 +32,8 @@
       <Folder Include="wwwroot\uploads\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AdminConstruct.Core\AdminConstruct.Core.csproj" />
+    </ItemGroup>
+
 </Project>
