--- a/AdminConstruct.API/appsettings.json
+++ b/AdminConstruct.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=jorge;Username=jorge;Password=jorge123"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
