--- a/AdminConstruct.API/AdminConstruct.API.csproj
+++ b/AdminConstruct.API/AdminConstruct.API.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="MailKit" Version="4.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.21" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.21" />
@@ -29,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AdminConstruct.Core\AdminConstruct.Core.csproj" />
+      <ProjectReference Include="..\AdminConstruct.Web\AdminConstruct.Web.csproj" />
     </ItemGroup>
 
 </Project>
