--- a/AdminConstruct.Web/AdminConstruct.Web.csproj
+++ b/AdminConstruct.Web/AdminConstruct.Web.csproj
@@ -32,4 +32,10 @@
       <Folder Include="wwwroot\uploads\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="AutoMapper">
+        <HintPath>..\..\..\.nuget\packages\automapper\12.0.1\lib\netstandard2.1\AutoMapper.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
