--- a/AdminConstruct.API/appsettings.json
+++ b/AdminConstruct.API/appsettings.json
@@ -1,28 +1,23 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=jorge;Username=jorge;Password=jorge123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AdminConstructDb;Username=postgres;Password=admin1234"
   },
-
   "Jwt": {
     "Key": "ESTA_ES_UNA_LLAVE_SUPER_SECRETA_DE_32_CARACTERES_1234",
     "Issuer": "AdminConstructAPI",
     "Audience": "AdminConstructClients"
   },
-
   "Smtp": {
     "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "TU_CORREO@gmail.com",
     "Password": "AQUÍ_APP_PASSWORD_DE_GMAIL"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*"
 }
-
