--- a/AdminConstruct.Web/appsettings.json
+++ b/AdminConstruct.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=jorge;Username=jorge;Password=jorge123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AdminConstructDb;Username=postgres;Password=admin1234"
     
   },
   "Logging": {
