--- a/AdminConstruct.Test/AdminConstruct.Test.csproj
+++ b/AdminConstruct.Test/AdminConstruct.Test.csproj
@@ -10,7 +10,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +26,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\AdminConstruct.Web\AdminConstruct.Web.csproj" />
+      <ProjectReference Include="..\AdminConstruct.API\AdminConstruct.API.csproj" />
     </ItemGroup>
 
 </Project>
