--- a/AdminConstruct.Web/AdminConstruct.Web.csproj
+++ b/AdminConstruct.Web/AdminConstruct.Web.csproj
@@ -15,7 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="EPPlus" Version="6.2.7" />
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="EPPlus" Version="7.5.0" />
       <PackageReference Include="iTextSharp" Version="5.5.13.4" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.21" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.21" />
@@ -25,17 +27,11 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
-      <PackageReference Include="QuestPDF" Version="2025.12.0-alpha2" />
+      <PackageReference Include="QuestPDF" Version="2025.7.4" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="wwwroot\uploads\" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="AutoMapper">
-        <HintPath>..\..\..\.nuget\packages\automapper\12.0.1\lib\netstandard2.1\AutoMapper.dll</HintPath>
-      </Reference>
     </ItemGroup>
 
 </Project>
