--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,24 @@
-# Ejemplo de variables de entorno para producción
-# Copia este archivo a .env y configura tus valores
+# Environment Variables Configuration Template
+# Copy this file to .env and replace with your actual values
+# Or use env_configuration.txt which has pre-configured values
 
-# Base de Datos
-POSTGRES_DB=AdminConstructDb
+# Database Configuration
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=CAMBIA_ESTO_EN_PRODUCCION
+POSTGRES_PASSWORD=change_this_password
+POSTGRES_DB=AdminConstructDb
+DB_HOST=db
+DB_PORT=5432
 
-# JWT (IMPORTANTE: Usa una clave segura de al menos 32 caracteres)
-JWT_SECRET_KEY=CAMBIA_ESTO_POR_UNA_CLAVE_SUPER_SEGURA_DE_AL_MENOS_32_CARACTERES
+# Connection String for Docker (uses service name 'db')
+CONNECTION_STRING=Host=db;Port=5432;Database=AdminConstructDb;Username=postgres;Password=change_this_password
 
-# SMTP (Configuración de email)
-SMTP_SERVER=smtp.gmail.com
+# JWT Configuration (IMPORTANT: Use a secure key of at least 32 characters)
+JWT_KEY=your_super_secret_jwt_key_at_least_32_characters_long
+JWT_ISSUER=AdminConstructAPI
+JWT_AUDIENCE=AdminConstructClients
+
+# SMTP Configuration (for email notifications)
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=tu-email@gmail.com
-SMTP_PASSWORD=tu-app-password
-
-# URLs de los servicios (cambiar en producción)
-API_URL=http://localhost:5228
-WEB_URL=http://localhost:5005
-CLIENT_URL=http://localhost:3000
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_gmail_app_password
