--- a/AdminConstruct.API/appsettings.json
+++ b/AdminConstruct.API/appsettings.json
@@ -1,17 +1,17 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=AdminConstructDb;Username=postgres;Password=admin1234"
+    "DefaultConnection": "Host=localhost;Port=${DB_PORT};Database=${POSTGRES_DB};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}"
   },
   "Jwt": {
-    "Key": "ESTA_ES_UNA_LLAVE_SUPER_SECRETA_DE_32_CARACTERES_1234",
-    "Issuer": "AdminConstructAPI",
-    "Audience": "AdminConstructClients"
+    "Key": "${JWT_KEY}",
+    "Issuer": "${JWT_ISSUER}",
+    "Audience": "${JWT_AUDIENCE}"
   },
   "Smtp": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "Username": "TU_CORREO@gmail.com",
-    "Password": "AQUÍ_APP_PASSWORD_DE_GMAIL"
+    "Host": "${SMTP_HOST}",
+    "Port": "${SMTP_PORT}",
+    "Username": "${SMTP_USERNAME}",
+    "Password": "${SMTP_PASSWORD}"
   },
   "Logging": {
     "LogLevel": {
