--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,47 @@
-# Environment Variables Configuration Template
-# Copy this file to .env and replace with your actual values
-# Or use env_configuration.txt which has pre-configured values
+# ========================================
+# AdminConstruct - Environment Configuration
+# ========================================
+# 
+# INSTRUCTIONS:
+# 1. Copy this file to .env
+#    cp .env.example .env
+# 2. Run: docker compose up --build
+#
+# These values are pre-configured to work with Docker out of the box.
+# ========================================
 
-# Database Configuration
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=change_this_password
-POSTGRES_DB=AdminConstructDb
+# ========================================
+# DATABASE CONFIGURATION
+# ========================================
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db
 DB_HOST=db
 DB_PORT=5432
 
-# Connection String for Docker (uses service name 'db')
-CONNECTION_STRING=Host=db;Port=5432;Database=AdminConstructDb;Username=postgres;Password=change_this_password
+# Connection String (uses Docker service name 'db')
+CONNECTION_STRING=Host=db;Port=5432;Database=db;Username=user;Password=password
 
-# JWT Configuration (IMPORTANT: Use a secure key of at least 32 characters)
-JWT_KEY=your_super_secret_jwt_key_at_least_32_characters_long
-JWT_ISSUER=AdminConstructAPI
-JWT_AUDIENCE=AdminConstructClients
+# ========================================
+# JWT AUTHENTICATION CONFIGURATION
+# ========================================
+# Default key for development/testing
+JWT_KEY=key
+JWT_ISSUER=Admin
+JWT_AUDIENCE=Admin
 
-# SMTP Configuration (for email notifications)
+# ========================================
+# SMTP EMAIL CONFIGURATION (Optional)
+# ========================================
+# Leave as is if not using email, or update with your credentials
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=your_email@gmail.com
 SMTP_PASSWORD=your_gmail_app_password
+
+# ========================================
+# DEFAULT USER CREDENTIALS (Reference)
+# ========================================
+# Admin: admin@adminconstruct.com / Admin123!
+# Client: client@example.com / Client123!
+# ========================================
